Translate the clip rect correctly when iterating over fragmentainers.

The clip rect is visual, so we need to shift each fragmentainer group by its
visual translation. This matters for nested multicol.

BUG=642325

Review-Url: https://codereview.chromium.org/2321333002
Cr-Commit-Position: refs/heads/master@{#417563}

Former-commit-id: 4a0e7885bc0bb78310c2016901f438588b483e42